changes in data

--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
 						<div class="hello wow bounceInDown">
 							<center><img src="assets/images/photo.jpg" class="img-circle" alt="pet image" width="110" height="110" /></center>
 							<h1>Hello, I'm Mansi Jain</h1>
-							<h3><span class="rotate">Software Engineer. | Web Developer. | Java Programmer. | Data Evangelist</span></h3>
+							<h3><span class="rotate">Software Engineer. | Web Developer. | Java Programmer. | Data Evangelist.</span></h3>
 						</div>
 
 						<a href="#profile">
@@ -158,7 +158,7 @@
 
 					<div class="col-md-12 headline wow bounceInDown">
 						<h2>Mansi Jain</h2>
-						<p>Software Engineer. Web Developer. Java Programmer.</p>
+						<p>Software Engineer. Web Developer. Java Programmer. Data Evangelist.</p>
 					</div>
 
 					<div class="col-md-3 col-sm-6 hidden-xs wow bounceInLeft">
