changes in content

--- a/index.html
+++ b/index.html
@@ -33,6 +33,7 @@
 
 	<!-- Custom styles CSS -->
 	<link href="assets/css/style.css" rel="stylesheet" media="screen">
+	<link rel='shortcut icon' type='image/x-icon' href='/assets/images/code.ico' />
 </head>
 <body>
 
@@ -162,7 +163,7 @@
 					</div>
 
 					<div class="col-md-3 col-sm-6 hidden-xs wow bounceInLeft">
-						<img class="avatar" src="assets/images/photo.jpg" alt="">
+						<img class="avatar" src="assets/images/main.jpg" alt="">
 						<br/><br/>
 						<div class="profile-widget">
 							<h3>Social Profiles</h3>
@@ -231,7 +232,7 @@
 							<p>Technical Competencies:
 							<ul>
 								<li>Programming Languages: Java, C++, C, Python, MATLAB</li>
-								<li>Web Technologies: CSS3, HTML5, JavaScript, PHP, AJAX, Bootstrap, SEO</li>
+								<li>Web Technologies: CSS3, HTML5, JSP, Servlets, JavaScript, PHP, AJAX, Bootstrap, SEO</li>
 								<li>Frameworks: Hibernate ORM, Spring MVC, Django, Struts/Struts2</li>
 								<li>Databases: MySQL, SQL Server, Oracle, Microsoft Access</li>
 								<li>Operating Systems: Windows, Linux (Ubuntu, Fedora, Red Hat Enterprise Linux), Mac OS X</li>
