--- a/index.html
+++ b/index.html
@@ -66,12 +66,12 @@
 				<!-- Collect the nav links, forms, and other content for toggling -->
 				<div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
 					<ul class="nav navbar-nav navbar-right">
-						<li><a href="#intro">Home</a></li>
-						<li><a href="#profile">Profile</a></li>
-						<li><a href="#services">Services</a></li>
-						<li><a href="#resume">Resume</a></li>
-						<li><a href="#portfolio">Projects</a></li>
-						<li><a href="#contact">Contact</a></li>
+						<li><a href="#intro"><span class="glyphicon glyphicon-home white"></span> Home</a></li>
+						<li><a href="#profile"><span class="glyphicon glyphicon-user white"></span> Profile</a></li>
+						<li><a href="#services"><span class="glyphicon glyphicon-briefcase white" aria-hidden="true"></span> Work</a></li>
+						<li><a href="#resume"><span class="glyphicon glyphicon-list-alt white"></span> Resume</a></li>
+						<li><a href="#portfolio"><span class="glyphicon glyphicon-folder-open white"></span> Projects</a></li>
+						<li><a href="#contact"><span class="glyphicon glyphicon-earphone white"></span> Contact</a></li>
 					</ul>
 				</div>
 
