links and updated resume

--- a/index.html
+++ b/index.html
@@ -169,7 +169,7 @@
 							<h3>Social Profiles</h3>
 							<ul class="widget-social">
 								<li><a href="https://www.facebook.com/mansijain.nitrr"><i class="fa fa-facebook fa-fw"></i></a></li>
-								<li><a href="#"><i class="fa fa-github-alt"></i></a></li>
+								<li><a href="https://github.com/mansijain01"><i class="fa fa-github-alt"></i></a></li>
 								<li><a href="https://plus.google.com/u/0/+MansiJainNITRR/posts"><i class="fa fa-google-plus"></i></a></li>
 							</ul>
 						</div>
@@ -232,7 +232,7 @@
 							<p>Technical Competencies:
 							<ul>
 								<li>Programming Languages: Java, C++, C, Python, MATLAB</li>
-								<li>Web Technologies: CSS3, HTML5, JSP, Servlets, JavaScript, PHP, AJAX, Bootstrap, SEO</li>
+								<li>Web Technologies: CSS3, HTML5, Node.js, Angular.js, JSP, Servlets, JavaScript, PHP, AJAX, Bootstrap, SEO</li>
 								<li>Frameworks: Hibernate ORM, Spring MVC, Django, Struts/Struts2</li>
 								<li>Databases: MySQL, SQL Server, Oracle, Microsoft Access</li>
 								<li>Operating Systems: Windows, Linux (Ubuntu, Fedora, Red Hat Enterprise Linux), Mac OS X</li>
