--- a/index.html
+++ b/index.html
@@ -692,7 +692,7 @@
 
 					<div class="col-md-6 wow bounceInUp">
 
-						<p>In case you have any queries, fill the following form or drop me a line.</p>
+						<p>In case you have any queries, drop me a line.</p>
 
 						<ul class="icon-list">
 							<li><i class="fa fa-fw fa-map-marker"></i>49 Symphony Road, Boston, Massachusetts 02115</li>
@@ -745,7 +745,7 @@
 								var marker=new google.maps.Marker({
   								position:myCenter,
   								animation:google.maps.Animation.BOUNCE
-									
+
   							});
 
 							marker.setMap(map);
