links changed, font awesome icons changed

--- a/index.html
+++ b/index.html
@@ -168,9 +168,9 @@
 						<div class="profile-widget">
 							<h3>Social Profiles</h3>
 							<ul class="widget-social">
-								<li><a href="https://www.facebook.com/mansijain.nitrr"><i class="fa fa-facebook fa-fw"></i></a></li>
-								<li><a href="https://github.com/mansijain01"><i class="fa fa-github-alt"></i></a></li>
-								<li><a href="https://plus.google.com/u/0/+MansiJainNITRR/posts"><i class="fa fa-google-plus"></i></a></li>
+								<li><a href="https://www.facebook.com/mansijain.nitrr" target="_blank"><i class="fa fa-facebook fa-fw"></i></a></li>
+								<li><a href="https://github.com/mansijain01" target="_blank"><i class="fa fa-github"></i></a></li>
+								<li><a href="https://plus.google.com/u/0/+MansiJainNITRR/posts" target="_blank"><i class="fa fa-google-plus"></i></a></li>
 							</ul>
 						</div>
 					</div>
@@ -307,8 +307,8 @@
 				<div class="row">
 
 					<div class="col-md-12 headline wow bounceInDown">
-						<h2>A glimpse of my work on <a href = "https://github.com/mansijain01">GITHUB</a></h2>
-						<p><a href = "https://github.com/mansijain01">Click here to go to my github.</a></p>
+						<h2>A glimpse of my work on <a href = "https://github.com/mansijain01" target="_blank">GITHUB</a></h2>
+						<p><a href = "https://github.com/mansijain01" target="_blank">Click here to go to my github.</a></p>
 					</div>
 
 					<div class="col-md-12">
@@ -697,7 +697,7 @@
 						<ul class="icon-list">
 							<li><i class="fa fa-fw fa-map-marker"></i>49 Symphony Road, Boston, Massachusetts 02115</li>
 							<li><i class="fa fa-fw fa-envelope-o"></i><a href="mailto:">jain.ma@husky.neu.edu</a></li>
-							<li><i class="fa fa-fw fa-globe"></i><a href="#">https://github.com/mansijain01</a></li>
+							<li><i class="fa fa-fw fa-globe"></i><a href="http://www.github.com/mansijain01" target="_blank">https://github.com/mansijain01</a></li>
 						</ul>
 
 					</div>
