--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
 					<div class="col-md-12">
 
 						<div class="hello wow bounceInDown">
-							<center><img src="assets/images/photo.jpg" class="img-circle" alt="pet image" width="110" height="110" /></center>
+							<center><img src="assets/images/photo.jpg" class="img-circle" alt="image" width="110" height="110" /></center>
 							<h1>Hello, I'm Mansi Jain</h1>
 							<h3><span class="rotate">Software Engineer. | Web Developer. | Java Programmer. | Data Evangelist.</span></h3>
 						</div>
