added co-op work ex

--- a/index.html
+++ b/index.html
@@ -137,7 +137,7 @@
 					<div class="col-sm-4 wow bounceInRight">
 						<div class="profile-item">
 							<i class="fa fa-map-marker"></i>
-							<h5>49 Symphony Road, Boston, Massachusetts</h5>
+							<h5>83 Westland Avenue, Boston, Massachusetts</h5>
 						</div>
 					</div>
 
@@ -188,6 +188,14 @@
 								<div class="skill-rate-off"></div>
 							</div>
 
+							<h5>Python</h5>
+							<div class="skill-bar">
+								<div class="skill-rate-on"></div>
+								<div class="skill-rate-on"></div>
+								<div class="skill-rate-off"></div>
+								<div class="skill-rate-off"></div>
+							</div>
+
 							<h5>HTML / CSS3 </h5>
 							<div class="skill-bar">
 								<div class="skill-rate-on"></div>
@@ -231,10 +239,10 @@
 							<p>I am actively seeking a co-op as software developer in an organization where I would be able to demonstrate my skills I acquired through my industrial visits and internships while working on versatile projects.</p>
 							<p>Technical Competencies:
 							<ul>
-								<li>Programming Languages: Java, C++, C, Python, MATLAB</li>
-								<li>Web Technologies: CSS3, HTML5, Node.js, Angular.js, JSP, Servlets, JavaScript, PHP, AJAX, Bootstrap, SEO</li>
-								<li>Frameworks: Hibernate ORM, Spring MVC, Django, Struts/Struts2</li>
-								<li>Databases: MySQL, SQL Server, Oracle, Microsoft Access</li>
+								<li>Programming Languages: Java, C++, Python, JavaScript</li>
+								<li>Web Technologies: CSS3, HTML5, Node.js, Angular.js, JSP, Servlets, PHP, AJAX, Bootstrap, SEO</li>
+								<li>Frameworks: Hibernate ORM, Spring MVC, Hadoop MapReduce</li>
+								<li>Databases: MySQL, SQL Server, Oracle</li>
 								<li>Operating Systems: Windows, Linux (Ubuntu, Fedora, Red Hat Enterprise Linux), Mac OS X</li>
 								<li>Networking: Linux-Unix Concepts, TCP/IP, Ethical Hacking, DNS, DHCP</li>
 								<li>Software Applications: Weka, Eclipse IDE, Git, Netbeans, VMware, WAMP, Xampp, Latex</li>
@@ -266,7 +274,7 @@
 					<div class="col-md-3 col-sm-4 wow bounceInDown">
 						<div class="stat">
 							<div class="stat-icon">
-								<h2><i class="fa fa-coffee hidden-xs"></i><span class="timer" data-to="74"></span></h2>
+								<h2><i class="fa fa-coffee hidden-xs"></i><span class="timer" data-to="89"></span></h2>
 							</div>
 							<h3>Cup of coffee</h3>
 						</div>
@@ -284,7 +292,7 @@
 					<div class="col-md-3 col-sm-4 wow bounceInRight">
 						<div class="stat">
 							<div class="stat-icon">
-								<h2><i class="fa fa-child hidden-xs"></i><span class="timer" data-to="8"></span>+</h2>
+								<h2><i class="fa fa-child hidden-xs"></i><span class="timer" data-to="11"></span>+</h2>
 							</div>
 							<h3>Successful Projects</h3>
 						</div>
@@ -419,8 +427,8 @@
 					</div>
 
 					<div class="col-md-9 headline nomargin wow bounceInDown">
-						<h3>I'm currently looking for a co-op position.</h3>
-						<p>Seeking co-op position starting this summer for Software Engineering profile.</p>
+						<h3>I'm currently looking for a full-time position.</h3>
+						<p>Seeking full-time position starting from May'17 for Software Engineering profile.</p>
 						<a href="#contact" class="btn btn-default btn-custom-2 callout-btn"><i class="fa fa-paper-plane-o icon-before"></i> Contact me</a>
 					</div>
 
@@ -486,6 +494,24 @@
 					</div>
 
 					<div class="col-md-6 col-sm-8 resume-item wow bounceInUp">
+						<h4>Software Development Intern</h4>
+						<p>
+							•	Implemented Java to develop middle tier, UI using GUI component such as SmartGWT and Oracle database.<br/>
+							•	Developed and implemented test cases using JUnit and Selenium.<br/>
+							•	Responsible for facilitating grooming, daily scrums and weekly scrum of scrums meetings as Scrum Master.<br/>
+							•	Involved in all the phases of Software Development Life Cycle by delivering a functional module.<br/>
+							•	Achieved an increased end user productivity by 30% when module integrated with Ericsson's final product.<br/>
+						</p>
+						<hr class="hidden-xs">
+					</div>
+
+					<div class="col-md-3 col-sm-4 resume-place wow bounceInRight">
+						<h4><i class="fa fa-suitcase"></i> Ericsson, Inc.</h4>
+						<i class="fa fa-calendar"></i> May 2016 - Present
+						<hr class="visible-xs">
+					</div>
+
+					<div class="col-md-6 col-md-offset-3 col-sm-8 resume-item wow bounceInUp">
 						<h4>Research Assistant</h4>
 						<p>Working closely with Professor. Chaiyaporn Mutsalklisana on a project dealing with the Internet of Things(IoT) and Data Analysis which works on latest data technologies.</p>
 						<hr class="hidden-xs">
@@ -695,7 +721,7 @@
 						<p>In case you have any queries, drop me a line.</p>
 
 						<ul class="icon-list">
-							<li><i class="fa fa-fw fa-map-marker"></i>49 Symphony Road, Boston, Massachusetts 02115</li>
+							<li><i class="fa fa-fw fa-map-marker"></i>83 Westland Avenue, Boston, Massachusetts 02115</li>
 							<li><i class="fa fa-fw fa-envelope-o"></i><a href="mailto:">jain.ma@husky.neu.edu</a></li>
 							<li><i class="fa fa-fw fa-globe"></i><a href="http://www.github.com/mansijain01" target="_blank">https://github.com/mansijain01</a></li>
 						</ul>
