--- a/index.html
+++ b/index.html
@@ -127,13 +127,6 @@
 						</div>
 					</div>
 
-					<div class="col-sm-4 wow bounceInUp">
-						<div class="profile-item">
-							<i class="fa fa-phone"></i>
-							<h5>(+1) 857-316-7418</h5>
-						</div>
-					</div>
-
 					<div class="col-sm-4 wow bounceInRight">
 						<div class="profile-item">
 							<i class="fa fa-map-marker"></i>
@@ -236,13 +229,13 @@
 					<div class="col-md-6 col-sm-12 wow bounceInRight">
 						<h3>Profesional Profile</h3>
 							<p>Currently, an Information Systems Graduate Student at Northeastern University with 1.5 years of experience in Web Development. Proficient in Java as a swing application and Machine learning including data preprocessing, segmentation, feature extraction, feature selection and classification.</p>
-							<p>I am actively seeking a co-op as software developer in an organization where I would be able to demonstrate my skills I acquired through my industrial visits and internships while working on versatile projects.</p>
+							<p>I am actively seeking a full-time job as software developer in an organization where I would be able to demonstrate my skills I acquired through my industrial visits and internships while working on versatile projects.</p>
 							<p>Technical Competencies:
 							<ul>
 								<li>Programming Languages: Java, C++, Python, JavaScript</li>
-								<li>Web Technologies: CSS3, HTML5, Node.js, Angular.js, JSP, Servlets, PHP, AJAX, Bootstrap, SEO</li>
+								<li>Web Technologies: Smart Google WebToolKit, CSS3, HTML5, Node.js, Angular.js, JSP, Servlets, PHP, AJAX, Bootstrap, SEO</li>
 								<li>Frameworks: Hibernate ORM, Spring MVC, Hadoop MapReduce</li>
-								<li>Databases: MySQL, SQL Server, Oracle</li>
+								<li>Databases: MySQL, SQL Server, Oracle, Hbase</li>
 								<li>Operating Systems: Windows, Linux (Ubuntu, Fedora, Red Hat Enterprise Linux), Mac OS X</li>
 								<li>Networking: Linux-Unix Concepts, TCP/IP, Ethical Hacking, DNS, DHCP</li>
 								<li>Software Applications: Weka, Eclipse IDE, Git, Netbeans, VMware, WAMP, Xampp, Latex</li>
@@ -723,7 +716,7 @@
 						<ul class="icon-list">
 							<li><i class="fa fa-fw fa-map-marker"></i>83 Westland Avenue, Boston, Massachusetts 02115</li>
 							<li><i class="fa fa-fw fa-envelope-o"></i><a href="mailto:">jain.ma@husky.neu.edu</a></li>
-							<li><i class="fa fa-fw fa-globe"></i><a href="http://www.github.com/mansijain01" target="_blank">https://github.com/mansijain01</a></li>
+							<li><i class="fa fa-fw fa-globe"></i><a href="http://www.github.com/mansijain01" target="_blank">https://github.com/jainmansi</a></li>
 						</ul>
 
 					</div>
