--- a/index.html
+++ b/index.html
@@ -308,8 +308,8 @@
 				<div class="row">
 
 					<div class="col-md-12 headline wow bounceInDown">
-						<h2>A glimpse of my work on <a href = "https://github.com/mansijain01" target="_blank">GITHUB</a></h2>
-						<p><a href = "https://github.com/mansijain01" target="_blank">Click here to go to my github.</a></p>
+						<h2>A glimpse of my work on <a href = "https://github.com/jainmansi" target="_blank">GITHUB</a></h2>
+						<p><a href = "https://github.com/jainmansi" target="_blank">Click here to go to my github.</a></p>
 					</div>
 
 					<div class="col-md-12">
@@ -456,7 +456,7 @@
 
 					<div class="col-md-6 col-sm-8 resume-item wow bounceInUp">
 						<h4>Information Systems</h4>
-						<p>Relevant Courses: Application Engineering and Design, Database Design and Management, Web Tools and Algorithms</p>
+						<p>Relevant Courses: Application Engineering and Design, Database Design and Management, Web Development, Algorithms, Data Analysis using Python, Advanced Database Management, Cloud Computing</p>
 						<hr class="hidden-xs">
 					</div>
 
@@ -500,19 +500,34 @@
 
 					<div class="col-md-3 col-sm-4 resume-place wow bounceInRight">
 						<h4><i class="fa fa-suitcase"></i> Ericsson, Inc.</h4>
-						<i class="fa fa-calendar"></i> May 2016 - Present
+						<i class="fa fa-calendar"></i> May 2016 - Dec 2016
 						<hr class="visible-xs">
 					</div>
 
 					<div class="col-md-6 col-md-offset-3 col-sm-8 resume-item wow bounceInUp">
-						<h4>Research Assistant</h4>
-						<p>Working closely with Professor. Chaiyaporn Mutsalklisana on a project dealing with the Internet of Things(IoT) and Data Analysis which works on latest data technologies.</p>
+						<h4>Graduate Teaching Assistant</h4>
+						<p>
+							•	In guidance of Professor Kal Bugrara(program director), mentored 35 students in the subject of Algorithms</br>
+							•	Responsible for solving doubts, designing weekly quizzes, weekly code walks and assessments, conducting code reviews.</br>
+						</p>
 						<hr class="hidden-xs">
 					</div>
 
 					<div class="col-md-3 col-sm-4 resume-place wow bounceInRight">
 						<h4><i class="fa fa-suitcase"></i> Northeastern University</h4>
-						<i class="fa fa-calendar"></i> 2016 - Present
+						<i class="fa fa-calendar"></i> Jan 2017 - May 2017
+						<hr class="visible-xs">
+					</div>
+
+					<div class="col-md-6 col-md-offset-3 col-sm-8 resume-item wow bounceInUp">
+						<h4>Research Assistant</h4>
+						<p>Working closely with Professor. Chaiyaporn Mutsalklisana on a project dealing with the Machine Learning and Data Classification.</p>
+						<hr class="hidden-xs">
+					</div>
+
+					<div class="col-md-3 col-sm-4 resume-place wow bounceInRight">
+						<h4><i class="fa fa-suitcase"></i> Northeastern University</h4>
+						<i class="fa fa-calendar"></i>May 2016 - Dec 2016
 						<hr class="visible-xs">
 					</div>
 
@@ -583,9 +598,9 @@
 
 					</div> .col-md-9 -->
 
-				<!-- </div> .row --> -->
+				<!-- </div> .row --> 
 
-			<!-- </div> .container --> -->
+			<!-- </div> .container --> 
 
 		<!-- </section> -->
 
@@ -605,21 +620,63 @@
 					</div>
 
 					<div class="col-md-4 col-sm-6 wow bounceInLeft">
-						<a href="https://github.com/mansijain01/GastricCancerDetection" class="pop-up" title="Automated Gastric Cancer Detection">
+						<a href="https://github.com/jainmansi/AnalyzingAirbnbData-Python" class="pop-up" title="Python to analyze Airbnb Boston's Data">
 							<div class="portfolio-item">
 								<div class="portfolio-item-preview">
-									<img src="assets/images/cancerDetection.jpg" alt="Automated Gastric Cancer Detection Using Machine Learning">
+									<img src="assets/images/airbnbAnalysis.jpg" alt="Analyzing Airbnb's Boston Dataset using Python">
 								</div>
 								<div class="portfolio-item-description">
-									<h3>Automated Gastric Cancer Detection Using Machine Learning</h3>
-									<p>Machine Learning | MATLAB</p>
+									<h3>Airbnb's Boston Data Analysis</h3>
+									<p>Python | Data Analysis</p>
 								</div>
 							</div>
 						</a>
 					</div>
 
 					<div class="col-md-4 col-sm-6 wow bounceInUp">
-						<a href="https://github.com/mansijain01/AgriBusinessLogistics" class="pop-up" title="Agri-Business Logistics Using Internet of Things">
+						<a href="assets/images/cloudArchi.jpg" class="pop-up" title="Setting up cloud infrastructure on AWS">
+							<div class="portfolio-item">
+								<div class="portfolio-item-preview">
+									<img src="assets/images/cloudArchi.jpg" alt="Setting up cloud infrastructure on AWS">
+								</div>
+								<div class="portfolio-item-description">
+									<h3>Setting up cloud infrastructure</h3>
+									<p>Amazon AWS | Spring Application</p>
+								</div>
+							</div>
+						</a>
+					</div>
+
+					<div class="col-md-4 col-sm-6 wow bounceInRight">
+						<a href="https://github.com/jainmansi/BayAreaBikeShareAnalysis" class="pop-up" title="Analyzing BABS Dataset using Hadoop MapReduce">
+							<div class="portfolio-item">
+								<div class="portfolio-item-preview">
+									<img src="assets/images/BABSAnalysis.jpg" alt="Analyzing BABS Dataset using Hadoop MapReduce">
+								</div>
+								<div class="portfolio-item-description">
+									<h3>BABS Data Analysis</h3>
+									<p>MapReduce | Pig | Hive | Tableau</p>
+								</div>
+							</div>
+						</a>
+					</div>
+
+					<div class="col-md-4 col-sm-6 wow bounceInLeft" data-wow-delay=".2s">
+						<a href="https://github.com/jainmansi/GastricCancerDetection" class="pop-up" title="Automated Gastric Cancer Detection">
+							<div class="portfolio-item">
+								<div class="portfolio-item-preview">
+									<img src="assets/images/cancerDetection.jpg" alt="Automated Gastric Cancer Detection Using Machine Learning">
+								</div>
+								<div class="portfolio-item-description">
+									<h3>Automated Gastric Cancer Detection</h3>
+									<p>Machine Learning | MATLAB</p>
+								</div>
+							</div>
+						</a>
+					</div>
+
+					<div class="col-md-4 col-sm-6 wow bounceInUp" data-wow-delay=".4s">
+						<a href="https://github.com/jainmansi/AgriBusinessLogistics" class="pop-up" title="Agri-Business Logistics Using Internet of Things">
 							<div class="portfolio-item">
 								<div class="portfolio-item-preview">
 									<img src="assets/images/agriBusiness.jpg" alt="Agri-Business Logistics Using Internet of Things">
@@ -632,8 +689,8 @@
 						</a>
 					</div>
 
-					<div class="col-md-4 col-sm-6 wow bounceInRight">
-						<a href="https://github.com/mansijain01/RenaissancePiratesQuiz" class="pop-up" title="Renaissance Pirates">
+					<div class="col-md-4 col-sm-6 wow bounceInRight" data-wow-delay=".6s">
+						<a href="https://github.com/jainmansi/RenaissancePiratesQuiz" class="pop-up" title="Renaissance Pirates">
 							<div class="portfolio-item">
 								<div class="portfolio-item-preview">
 									<img src="assets/images/renaissancePirates.jpg" alt="">
@@ -646,7 +703,7 @@
 						</a>
 					</div>
 
-					<div class="col-md-4 col-sm-6 wow bounceInUp" data-wow-delay=".2s">
+					<div class="col-md-4 col-sm-6 wow bounceInUp" data-wow-delay=".8s">
 						<a href="assets/images/studentFeedback.jpg" class="pop-up" title="Student Feedback Management System">
 							<div class="portfolio-item">
 								<div class="portfolio-item-preview">
@@ -660,7 +717,7 @@
 						</a>
 					</div>
 
-					<div class="col-md-4 col-sm-6 wow bounceInUp" data-wow-delay=".4s">
+					<div class="col-md-4 col-sm-6 wow bounceInUp" data-wow-delay="1.0s">
 						<a href="assets/images/hospitalPortal.jpg" class="pop-up" title="Hospital Management System">
 							<div class="portfolio-item">
 								<div class="portfolio-item-preview">
@@ -674,7 +731,7 @@
 						</a>
 					</div>
 
-					<div class="col-md-4 col-sm-6 wow bounceInUp" data-wow-delay=".6s">
+					<div class="col-md-4 col-sm-6 wow bounceInUp" data-wow-delay="1.2s">
 						<a href="assets/images/prisonManagement.jpg" class="pop-up" title="Smart Prison Management Using Internet of Things">
 							<div class="portfolio-item">
 								<div class="portfolio-item-preview">
@@ -716,7 +773,8 @@
 						<ul class="icon-list">
 							<li><i class="fa fa-fw fa-map-marker"></i>83 Westland Avenue, Boston, Massachusetts 02115</li>
 							<li><i class="fa fa-fw fa-envelope-o"></i><a href="mailto:">jain.ma@husky.neu.edu</a></li>
-							<li><i class="fa fa-fw fa-globe"></i><a href="http://www.github.com/mansijain01" target="_blank">https://github.com/jainmansi</a></li>
+							<li><i class="fa fa-fw fa-linkedin"></i><a href="https://www.linkedin.com/in/mansijain9/" target="_blank">https://www.linkedin.com/in/mansijain9/</a></li>
+							<li><i class="fa fa-fw fa-github"></i><a href="http://www.github.com/jainmansi" target="_blank">https://github.com/jainmansi</a></li>
 						</ul>
 
 					</div>
