--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
 						<div class="hello wow bounceInDown">
 							<center><img src="assets/images/photo.jpg" class="img-circle" alt="image" width="110" height="110" /></center>
 							<h1>Hello, I'm Mansi Jain</h1>
-							<h3><span class="rotate">Software Engineer. | Web Developer. | Java Programmer. | Data Evangelist.</span></h3>
+							<h3><span class="rotate">Full-Stack Software Developer. | Python Programmer. | Data Evangelist.</span></h3>
 						</div>
 
 						<a href="#profile">
@@ -130,7 +130,7 @@
 					<div class="col-sm-4 wow bounceInRight">
 						<div class="profile-item">
 							<i class="fa fa-map-marker"></i>
-							<h5>83 Westland Avenue, Boston, Massachusetts</h5>
+							<h5>1620 E Riverside Dr, Austin, Texas</h5>
 						</div>
 					</div>
 
@@ -152,7 +152,7 @@
 
 					<div class="col-md-12 headline wow bounceInDown">
 						<h2>Mansi Jain</h2>
-						<p>Software Engineer. Web Developer. Java Programmer. Data Evangelist.</p>
+						<p>Full-stack Software Developer. Python Programmer. Data Evangelist.</p>
 					</div>
 
 					<div class="col-md-3 col-sm-6 hidden-xs wow bounceInLeft">
@@ -185,19 +185,27 @@
 							<div class="skill-bar">
 								<div class="skill-rate-on"></div>
 								<div class="skill-rate-on"></div>
-								<div class="skill-rate-off"></div>
+								<div class="skill-rate-on"></div>
 								<div class="skill-rate-off"></div>
 							</div>
 
-							<h5>HTML / CSS3 </h5>
+							<h5>Javascript</h5>
 							<div class="skill-bar">
 								<div class="skill-rate-on"></div>
 								<div class="skill-rate-on"></div>
 								<div class="skill-rate-on"></div>
-								<div class="skill-rate-on"></div>
+								<div class="skill-rate-off"></div>
 							</div>
 
-							<h5>Javascript</h5>
+							<h5>React</h5>
+							<div class="skill-bar">
+								<div class="skill-rate-on"></div>
+								<div class="skill-rate-on"></div>
+								<div class="skill-rate-on"></div>
+								<div class="skill-rate-off"></div>
+							</div>
+
+							<h5>Redux</h5>
 							<div class="skill-bar">
 								<div class="skill-rate-on"></div>
 								<div class="skill-rate-on"></div>
@@ -228,14 +236,14 @@
 
 					<div class="col-md-6 col-sm-12 wow bounceInRight">
 						<h3>Profesional Profile</h3>
-							<p>Currently, an Information Systems Graduate Student at Northeastern University with 1.5 years of experience in Web Development. Proficient in Java as a swing application and Machine learning including data preprocessing, segmentation, feature extraction, feature selection and classification.</p>
-							<p>I am actively seeking a full-time job as software developer in an organization where I would be able to demonstrate my skills I acquired through my industrial visits and internships while working on versatile projects.</p>
+							<p>I am a Full Stack Software Developer at Cirrus Logic, Austin. On my day-to-day job, 
+							I work on technologies such as React, Redux, Django, PostgreSQL, Python. I completed my master at Northeastern University, Boston in Information Systems. During my masters, I gained professional experience as a Sofware Development Intern at Ericsson, Waltham, Massachusetts.</p>
 							<p>Technical Competencies:
 							<ul>
 								<li>Programming Languages: Java, C++, Python, JavaScript</li>
-								<li>Web Technologies: Smart Google WebToolKit, CSS3, HTML5, Node.js, Angular.js, JSP, Servlets, PHP, AJAX, Bootstrap, SEO</li>
-								<li>Frameworks: Hibernate ORM, Spring MVC, Hadoop MapReduce</li>
-								<li>Databases: MySQL, SQL Server, Oracle, Hbase</li>
+								<li>Web Technologies: React, Redux, Smart Google WebToolKit, CSS3, HTML5, Node.js, Angular.js, JSP, Servlets, PHP, AJAX, Bootstrap, SEO</li>
+								<li>Frameworks: Django, Hibernate ORM, Spring MVC, Hadoop MapReduce</li>
+								<li>Databases: PostgreSQL, MySQL, SQL Server, Oracle, Hbase</li>
 								<li>Operating Systems: Windows, Linux (Ubuntu, Fedora, Red Hat Enterprise Linux), Mac OS X</li>
 								<li>Networking: Linux-Unix Concepts, TCP/IP, Ethical Hacking, DNS, DHCP</li>
 								<li>Software Applications: Weka, Eclipse IDE, Git, Netbeans, VMware, WAMP, Xampp, Latex</li>
@@ -285,7 +293,7 @@
 					<div class="col-md-3 col-sm-4 wow bounceInRight">
 						<div class="stat">
 							<div class="stat-icon">
-								<h2><i class="fa fa-child hidden-xs"></i><span class="timer" data-to="11"></span>+</h2>
+								<h2><i class="fa fa-child hidden-xs"></i><span class="timer" data-to="15"></span>+</h2>
 							</div>
 							<h3>Successful Projects</h3>
 						</div>
@@ -319,82 +327,6 @@
 								<img src="assets/images/github.jpg" class="img-responsive" style="margin:auto;" width="85%" />
 							</div>
 
-							<!-- <div class="col-sm-4 wow bounceInLeft">
-								<div class="service">
-									<div class="icon">
-										<i class="fa fa-pencil"></i>
-									</div>
-									<h4>Text rotator</h4>
-									<div class="text">
-										<p>I am alone, and feel the charm of existence in this spot, which was created for the bliss of souls like mine. I am so happy, my dear friend.</p>
-									</div>
-								</div>
-							</div>
-
-							<div class="col-sm-4 wow bounceInUp">
-								<div class="service">
-									<div class="icon">
-										<i class="fa fa-image"></i>
-									</div>
-									<h4>Slideshow</h4>
-									<div class="text">
-										<p>I am alone, and feel the charm of existence in this spot, which was created for the bliss of souls like mine. I am so happy, my dear friend.</p>
-									</div>
-								</div>
-							</div>
-
-							<div class="col-sm-4 wow bounceInRight">
-								<div class="service">
-									<div class="icon">
-										<i class="fa fa-cog"></i>
-									</div>
-									<h4>Easy configure</h4>
-									<div class="text">
-										<p>I am alone, and feel the charm of existence in this spot, which was created for the bliss of souls like mine. I am so happy, my dear friend.</p>
-									</div>
-								</div>
-							</div>
-
-						</div> .row -->
-
-						<!-- <div class="row">
-
-							<div class="col-sm-4 wow bounceInUp" data-wow-delay=".2s">
-								<div class="service">
-									<div class="icon">
-										<i class="fa fa-code"></i>
-									</div>
-									<h4>Clear code</h4>
-									<div class="text">
-										<p>I am alone, and feel the charm of existence in this spot, which was created for the bliss of souls like mine. I am so happy, my dear friend.</p>
-									</div>
-								</div>
-							</div>
-
-							<div class="col-sm-4 wow bounceInUp" data-wow-delay=".4s">
-								<div class="service">
-									<div class="icon">
-										<i class="fa fa-desktop"></i>
-									</div>
-									<h4>Responsive design</h4>
-									<div class="text">
-										<p>I am alone, and feel the charm of existence in this spot, which was created for the bliss of souls like mine. I am so happy, my dear friend.</p>
-									</div>
-								</div>
-							</div>
-
-							<div class="col-sm-4 wow bounceInUp" data-wow-delay=".6s">
-								<div class="service">
-									<div class="icon">
-										<i class="fa fa-life-ring"></i>
-									</div>
-									<h4>Support</h4>
-									<div class="text">
-										<p>I am alone, and feel the charm of existence in this spot, which was created for the bliss of souls like mine. I am so happy, my dear friend.</p>
-									</div>
-								</div>
-							</div> -->
-
 						</div> <!--.row -->
 
 					</div><!-- .col-md-12 -->
@@ -420,8 +352,8 @@
 					</div>
 
 					<div class="col-md-9 headline nomargin wow bounceInDown">
-						<h3>I'm currently looking for a full-time position.</h3>
-						<p>Seeking full-time position starting from May'17 for Software Engineering profile.</p>
+						<h3>I'm currently a full-stack software developer at Cirrus Logic.</h3>
+						<p>If you wish to expand your professional network, feel free to contact me.</p>
 						<a href="#contact" class="btn btn-default btn-custom-2 callout-btn"><i class="fa fa-paper-plane-o icon-before"></i> Contact me</a>
 					</div>
 
@@ -487,6 +419,25 @@
 					</div>
 
 					<div class="col-md-6 col-sm-8 resume-item wow bounceInUp">
+						<h4>Full-Stack Software Developer</h4>
+						<p>
+							•	Collaborated with a team of 5 to develop a website in Django, Reactjs, Redux, Python, postgresSQL DB<br/>
+							•	Wrote and maintained one off python script to parse and import XML files through Django REST framework.<br/>
+							•	Designed and developed internal searching query language on requirements using Elastic Search.<br/>
+							•	Created pretotypes on Balsamiq, wrote tests on Behave and Selenium in a Test Driven Development (TDD).<br/>
+							•	Performed continuous integration using Perforce in Agile Development environment.<br/>
+						</p>
+						<hr class="hidden-xs">
+					</div>
+
+					<div class="col-md-3 col-sm-4 resume-place wow bounceInRight">
+						<h4><i class="fa fa-suitcase"></i> Cirrus Logic</h4>
+						<i class="fa fa-calendar"></i> Oct 2017 - Present
+						<hr class="visible-xs">
+					</div>
+
+
+					<div class="col-md-6 col-md-offset-3 col-sm-8 resume-item wow bounceInUp">
 						<h4>Software Development Intern</h4>
 						<p>
 							•	Implemented Java to develop middle tier, UI using GUI component such as SmartGWT and Oracle database.<br/>
@@ -771,8 +722,8 @@
 						<p>In case you have any queries, drop me a line.</p>
 
 						<ul class="icon-list">
-							<li><i class="fa fa-fw fa-map-marker"></i>83 Westland Avenue, Boston, Massachusetts 02115</li>
-							<li><i class="fa fa-fw fa-envelope-o"></i><a href="mailto:">jain.ma@husky.neu.edu</a></li>
+							<li><i class="fa fa-fw fa-map-marker"></i>1620 E Riverside Dr, Austin, Texas - 78741</li>
+							<li><i class="fa fa-fw fa-envelope-o"></i><a href="mailto:">mansijain.nitrr@gmail.com</a></li>
 							<li><i class="fa fa-fw fa-linkedin"></i><a href="https://www.linkedin.com/in/mansijain9/" target="_blank">https://www.linkedin.com/in/mansijain9/</a></li>
 							<li><i class="fa fa-fw fa-github"></i><a href="http://www.github.com/jainmansi" target="_blank">https://github.com/jainmansi</a></li>
 						</ul>
@@ -802,7 +753,7 @@
 							</button>
 
 						</form> -->
-						<script>
+						<!-- <script>
 							function myMap() {
   								var myCenter = new google.maps.LatLng(42.343410,-71.088986);
   								var mapCanvas = document.getElementById("map");
@@ -814,7 +765,7 @@
 						</script>
 
 						<script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDUg-RtAQraUrNDZXyU8tUkha-qMUFhxnY&callback=myMap"></script>
-
+ -->
 					<div id="googleMap" style="width:500px;height:380px;"></div>
 
 						<div class="ajax-response"></div>
@@ -837,10 +788,17 @@
 
 				<div class="row">
 
-					<div class="col-md-12">
+					<div class="col-md-3">
 						<p class="copy">
-							© 2016 Mansi Jain, All Rights Reserved.
+							© 2018 Mansi Jain, All Rights Reserved.
 						</p>
+					</div>
+					<div class="col-md-9">
+						<center>
+							<p>
+								Made with <span style="color: #e25555;">&hearts;</span> in Austin.
+							</p>
+						</center>
 					</div>
 
 				</div><!-- .row -->
