Update Online Portfolio

--- a/index.html
+++ b/index.html
@@ -130,7 +130,7 @@
 					<div class="col-sm-4 wow bounceInRight">
 						<div class="profile-item">
 							<i class="fa fa-map-marker"></i>
-							<h5>1620 E Riverside Dr, Austin, Texas</h5>
+							<h5>Southpark Meadows, Austin, Texas</h5>
 						</div>
 					</div>
 
@@ -236,11 +236,12 @@
 
 					<div class="col-md-6 col-sm-12 wow bounceInRight">
 						<h3>Profesional Profile</h3>
-							<p>I am a Full Stack Software Developer at Cirrus Logic, Austin. On my day-to-day job, 
-							I work on technologies such as React, Redux, Django, PostgreSQL, Python. I completed my master at Northeastern University, Boston in Information Systems. During my masters, I gained professional experience as a Sofware Development Intern at Ericsson, Waltham, Massachusetts.</p>
+							<p>I am a Senior Software Developer at AMD, Austin. On my day-to-day job, 
+							I work on technologies such as React, Redux, Flask, MangoDB, Python, Scala, Spark, Kafka. Before joining AMD, I gained 2 years of experience at Cirrus Logic, Austin as a Full Stack Software Developer. 
+							I completed my master at Northeastern University, Boston in Information Systems. During my masters, I gained professional experience as a Sofware Development Intern at Ericsson, Waltham, Massachusetts.</p>
 							<p>Technical Competencies:
 							<ul>
-								<li>Programming Languages: Java, C++, Python, JavaScript</li>
+								<li>Programming Languages: Java, C++, Python, JavaScript, Scala</li>
 								<li>Web Technologies: React, Redux, Smart Google WebToolKit, CSS3, HTML5, Node.js, Angular.js, JSP, Servlets, PHP, AJAX, Bootstrap, SEO</li>
 								<li>Frameworks: Django, Hibernate ORM, Spring MVC, Hadoop MapReduce</li>
 								<li>Databases: PostgreSQL, MySQL, SQL Server, Oracle, Hbase</li>
@@ -419,6 +420,19 @@
 					</div>
 
 					<div class="col-md-6 col-sm-8 resume-item wow bounceInUp">
+						<h4>Senior Full-Stack Software Developer</h4>
+						<p>&nbsp;
+						</p>
+						<hr class="hidden-xs">
+					</div>
+
+					<div class="col-md-3 col-sm-4 resume-place wow bounceInRight">
+						<h4><i class="fa fa-suitcase"></i> Advanced Micro Devices</h4>
+						<i class="fa fa-calendar"></i> April 2017 - Present
+						<hr class="visible-xs">
+					</div>
+
+					<div class="col-md-6 col-sm-8 col-md-offset-3 resume-item wow bounceInUp">
 						<h4>Full-Stack Software Developer</h4>
 						<p>
 							•	Collaborated with a team of 5 to develop a website in Django, Reactjs, Redux, Python, postgresSQL DB<br/>
@@ -432,7 +446,7 @@
 
 					<div class="col-md-3 col-sm-4 resume-place wow bounceInRight">
 						<h4><i class="fa fa-suitcase"></i> Cirrus Logic</h4>
-						<i class="fa fa-calendar"></i> Oct 2017 - Present
+						<i class="fa fa-calendar"></i> Oct 2017 - March 2020
 						<hr class="visible-xs">
 					</div>
 
