--- a/index.html
+++ b/index.html
@@ -736,7 +736,7 @@
 						<p>In case you have any queries, drop me a line.</p>
 
 						<ul class="icon-list">
-							<li><i class="fa fa-fw fa-map-marker"></i>1620 E Riverside Dr, Austin, Texas - 78741</li>
+							<li><i class="fa fa-fw fa-map-marker"></i>Southpark Meadows, Austin, Texas - 78744</li>
 							<li><i class="fa fa-fw fa-envelope-o"></i><a href="mailto:">mansijain.nitrr@gmail.com</a></li>
 							<li><i class="fa fa-fw fa-linkedin"></i><a href="https://www.linkedin.com/in/mansijain9/" target="_blank">https://www.linkedin.com/in/mansijain9/</a></li>
 							<li><i class="fa fa-fw fa-github"></i><a href="http://www.github.com/jainmansi" target="_blank">https://github.com/jainmansi</a></li>
