--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 
 	<!-- Custom styles CSS -->
 	<link href="assets/css/style.css" rel="stylesheet" media="screen">
-	<link rel='shortcut icon' type='image/x-icon' href='/assets/images/code.ico' />
+	<link rel='shortcut icon' type='image/x-icon' href='/assets/images/my-logo.png' />
 </head>
 <body>
 
@@ -60,7 +60,7 @@
 						<span class="icon-bar"></span>
 						<span class="icon-bar"></span>
 					</button>
-					<a class="navbar-brand" href="#">Mansi Jain</a>
+					<a class="navbar-brand" href='#'><img src="assets/images/my-logo.png" width=35px /></a>
 				</div>
 
 				<!-- Collect the nav links, forms, and other content for toggling -->
@@ -78,41 +78,10 @@
 			</div>
 		</nav>
 
-		<!-- Navigation end -->
-
-		<!-- Intro section start -->
-
-		<section id="intro" class="section">
-
-			<div class="container">
-
-				<div class="row">
-
-					<div class="col-md-12">
-
-						<div class="hello wow bounceInDown">
-							<center><img src="assets/images/photo.jpg" class="img-circle" alt="image" width="110" height="110" /></center>
-							<h1>Hello, I'm Mansi Jain</h1>
-							<h3><span class="rotate">Full-Stack Software Developer. | Python Programmer. | Data Evangelist.</span></h3>
-						</div>
-
-						<a href="#profile">
-							<div class="mouse-icon">
-								<div class="wheel"></div>
-							</div>
-						</a>
-
-					</div>
-
-				</div><!-- .row -->
-
-			</div><!-- .container -->
-
+	
+		<section height=100%>
+			<img src="assets/images/cover2.jpg" />
 		</section>
-
-		<!-- Intro section end -->
-
-		<!-- Profile contact callout section -->
 
 		<section id="profile-contact">
 
@@ -123,7 +92,7 @@
 					<div class="col-sm-4 wow bounceInLeft">
 						<div class="profile-item">
 							<i class="fa fa-envelope-o"></i>
-							<h5><a href="#">jain.ma@husky.neu.edu</a></h5>
+							<h5><a href="#">mansijain.nitrr@gmail.com</a></h5>
 						</div>
 					</div>
 
@@ -156,14 +125,14 @@
 					</div>
 
 					<div class="col-md-3 col-sm-6 hidden-xs wow bounceInLeft">
-						<img class="avatar" src="assets/images/main.jpg" alt="">
+						<img class="avatar" src="assets/images/photo.jpg" alt="">
 						<br/><br/>
 						<div class="profile-widget">
 							<h3>Social Profiles</h3>
 							<ul class="widget-social">
 								<li><a href="https://www.facebook.com/mansijain.nitrr" target="_blank"><i class="fa fa-facebook fa-fw"></i></a></li>
 								<li><a href="https://github.com/mansijain01" target="_blank"><i class="fa fa-github"></i></a></li>
-								<li><a href="https://plus.google.com/u/0/+MansiJainNITRR/posts" target="_blank"><i class="fa fa-google-plus"></i></a></li>
+								<li><a href="https://www.linkedin.com/in/mansijain9/" target="_blank"><i class="fa fa-linkedin"></i></a></li>
 							</ul>
 						</div>
 					</div>
@@ -238,7 +207,7 @@
 						<h3>Profesional Profile</h3>
 							<p>I am a Senior Software Developer at AMD, Austin. On my day-to-day job, 
 							I work on technologies such as React, Redux, Flask, MangoDB, Python, Scala, Spark, Kafka. Before joining AMD, I gained 2 years of experience at Cirrus Logic, Austin as a Full Stack Software Developer. 
-							I completed my master at Northeastern University, Boston in Information Systems. During my masters, I gained professional experience as a Sofware Development Intern at Ericsson, Waltham, Massachusetts.</p>
+							I completed my masters at Northeastern University, Boston in Information Systems. During my masters, I gained professional experience as a Sofware Development Intern at Ericsson, Waltham, Massachusetts.</p>
 							<p>Technical Competencies:
 							<ul>
 								<li>Programming Languages: Java, C++, Python, JavaScript, Scala</li>
@@ -276,7 +245,7 @@
 					<div class="col-md-3 col-sm-4 wow bounceInDown">
 						<div class="stat">
 							<div class="stat-icon">
-								<h2><i class="fa fa-coffee hidden-xs"></i><span class="timer" data-to="89"></span></h2>
+								<h2><i class="fa fa-coffee hidden-xs"></i><span class="timer" data-to="2000"></span>+</h2>
 							</div>
 							<h3>Cup of coffee</h3>
 						</div>
@@ -285,7 +254,7 @@
 					<div class="col-md-3 col-sm-4 wow bounceInUp">
 						<div class="stat">
 							<div class="stat-icon">
-								<h2><i class="fa fa-code hidden-xs"></i><span class="timer" data-to="9999"></span></h2>
+								<h2><i class="fa fa-code hidden-xs"></i><span class="timer" data-to="10000"></span>+</h2>
 							</div>
 							<h3>Line of code</h3>
 						</div>
@@ -353,7 +322,7 @@
 					</div>
 
 					<div class="col-md-9 headline nomargin wow bounceInDown">
-						<h3>I'm currently a full-stack software developer at Cirrus Logic.</h3>
+						<h3>I'm currently a Sr. Full-Stack Software Developer at AMD, Austin.</h3>
 						<p>If you wish to expand your professional network, feel free to contact me.</p>
 						<a href="#contact" class="btn btn-default btn-custom-2 callout-btn"><i class="fa fa-paper-plane-o icon-before"></i> Contact me</a>
 					</div>
@@ -497,7 +466,7 @@
 					</div>
 
 
-				</div><!-- .row -->
+				</div>
 
 				<div class="row">
 
@@ -505,73 +474,11 @@
 						<a href="assets/resume/MansiJain.pdf" target="_blank" class="btn btn-default btn-custom-2"><i class="fa fa-cloud-download icon-before"></i> Download Resume</a>
 					</div>
 
-				</div><!-- .row -->
+				</div>
 
-			</div><!-- .container -->
+			</div>
 
 		</section>
-
-		<!-- Resume section end -->
-
-		<!-- Callout section start -->
-
-		<!-- <section id="clients" class="callout">
-
-			<div class="container">
-
-				<div class="row">
-
-					<div class="col-md-3 hidden-xs wow bounceInLeft">
-						<h3>Customers</h3>
-					</div>
-
-					<div class="col-md-9 wow bounceInRight">
-
-						<div id="owl-clients" class="owl-carousel">
-
-							<div class="owl-item">
-								<img src="assets/images/logo/client160-3.png" alt="">
-								<h4>Client 1</h4>
-							</div>
-
-							<div class="owl-item">
-								<img src="assets/images/logo/client160-1.png" alt="">
-								<h4>Client 2</h4>
-							</div>
-
-							<div class="owl-item">
-								<img src="assets/images/logo/client160-3.png" alt="">
-								<h4>Client 3</h4>
-							</div>
-
-							<div class="owl-item">
-								<img src="assets/images/logo/client160-1.png" alt="">
-								<h4>Client 4</h4>
-							</div>
-
-							<div class="owl-item">
-								<img src="assets/images/logo/client160-3.png" alt="">
-								<h4>Client 5</h4>
-							</div>
-
-							<div class="owl-item">
-								<img src="assets/images/logo/client160-1.png" alt="">
-								<h4>Client 6</h4>
-							</div>
-
-						</div>
-
-					</div> .col-md-9 -->
-
-				<!-- </div> .row --> 
-
-			<!-- </div> .container --> 
-
-		<!-- </section> -->
-
-		<!-- Callout section end -->
-
-		<!-- Portfolio section start -->
 
 		<section id="portfolio" class="section">
 
@@ -767,7 +674,7 @@
 							</button>
 
 						</form> -->
-						<!-- <script>
+						<script>
 							function myMap() {
   								var myCenter = new google.maps.LatLng(42.343410,-71.088986);
   								var mapCanvas = document.getElementById("map");
@@ -779,9 +686,10 @@
 						</script>
 
 						<script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDUg-RtAQraUrNDZXyU8tUkha-qMUFhxnY&callback=myMap"></script>
- -->
-					<div id="googleMap" style="width:500px;height:380px;"></div>
 
+					<div id="googleMap" style="width:500px;height:380px;"></div>
+						<iframe width="600" height="450" frameborder="0" style="border:0"
+						src="https://www.google.com/maps/embed/v1/place?q=place_id:ChIJLwPMoJm1RIYRetVp1EtGm10&key=..." allowfullscreen></iframe>
 						<div class="ajax-response"></div>
 
 					</div>
